[package]
name = "hash-chain"
version = "0.2.4"
authors = ["Robert Masen <r.f.masen@gmail.com>", "Ben Gummoe <b.gummoe@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rusty-ecma/hash-chain"
readme = "README.md"
description = "A tiered hashmap and hashset implementation that allows for easily representing lexically scoped variables"
keywords = ["collections", "hashmap", "scope", "lexical"]
categories = ["data-structures"]

[dependencies]